--- a/src/IdentityModel.HttpSigning/IdentityModel.HttpSigning.csproj
+++ b/src/IdentityModel.HttpSigning/IdentityModel.HttpSigning.csproj
@@ -47,10 +47,12 @@
     <Reference Include="System.IdentityModel" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="Confirmation\CnfParser.cs" />
     <Compile Include="Confirmation\JsonWebKeyExtensions.cs" />
     <Compile Include="Confirmation\SigningKeys.cs" />
@@ -77,6 +79,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
+  <Import Project="..\..\IdentityModel.HttpSigning.Shared\IdentityModel.HttpSigning.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
