--- a/src/IdentityModel.HttpSigning/packages.config
+++ b/src/IdentityModel.HttpSigning/packages.config
@@ -3,5 +3,6 @@
   <package id="IdentityModel" version="1.10.0" targetFramework="net452" />
   <package id="jose-jwt" version="1.9.1" targetFramework="net452" />
   <package id="LibLog" version="4.2.4" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
 </packages>
