--- a/src/IdentityModel.HttpSigning/IdentityModel.HttpSigning.csproj
+++ b/src/IdentityModel.HttpSigning/IdentityModel.HttpSigning.csproj
@@ -63,6 +63,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
+  <Import Project="..\IdentityModel.HttpSigning.Shared\IdentityModel.HttpSigning.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
