--- a/IdentityModel.HttpSigning.Phone81.Tests/packages.config
+++ b/IdentityModel.HttpSigning.Phone81.Tests/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Flurl" version="2.3.0" targetFramework="wpa81" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wpa81" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="wpa81" />
   <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="wpa81" />
   <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="wpa81" />
