--- a/IdentityModel.HttpSigning.Phone81.Tests/IdentityModel.HttpSigning.Phone81.Tests.csproj
+++ b/IdentityModel.HttpSigning.Phone81.Tests/IdentityModel.HttpSigning.Phone81.Tests.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\xunit.core.2.1.0\build\wpa81\xunit.core.props" Condition="Exists('..\packages\xunit.core.2.1.0\build\wpa81\xunit.core.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -88,12 +89,80 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Confirmation\CnfParserTests.cs">
+      <Link>Confirmation\CnfParserTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Confirmation\JwkTests.cs">
+      <Link>Confirmation\JwkTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Confirmation\SigningKeyTests.cs">
+      <Link>Confirmation\SigningKeyTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Encoded\EncodedListTests.cs">
+      <Link>Encoded\EncodedListTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Encoded\EncodedParametersTests.cs">
+      <Link>Encoded\EncodedParametersTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Encoding\EncodingHeaderListTests.cs">
+      <Link>Encoding\EncodingHeaderListTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Encoding\EncodingListTests.cs">
+      <Link>Encoding\EncodingListTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Encoding\EncodingParametersTests.cs">
+      <Link>Encoding\EncodingParametersTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Encoding\EncodingQueryParametersTests.cs">
+      <Link>Encoding\EncodingQueryParametersTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\HttpClient\HttpRequestMessageExtensionsTests.cs">
+      <Link>HttpClient\HttpRequestMessageExtensionsTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\HttpClient\HttpSigningMessageHandlerTests.cs">
+      <Link>HttpClient\HttpSigningMessageHandlerTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\HttpClient\RequestSigningOptionsTests.cs">
+      <Link>HttpClient\RequestSigningOptionsTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\HttpClient\StubHttpMessageHandler.cs">
+      <Link>HttpClient\StubHttpMessageHandler.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Integration\IntegrationTests.cs">
+      <Link>Integration\IntegrationTests.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Setup.cs">
+      <Link>Setup.cs</Link>
+    </Compile>
+    <Compile Include="..\src\IdentityModel.HttpSigning.Tests\Signatures\SignatureTests.cs">
+      <Link>Signatures\SignatureTests.cs</Link>
+    </Compile>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FluentAssertions, Version=4.3.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentAssertions.4.3.0\lib\wpa81\FluentAssertions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FluentAssertions.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentAssertions.4.3.0\lib\wpa81\FluentAssertions.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Flurl, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Flurl.2.3.0\lib\portable40-net40+sl5+win8+wp8+wpa81\Flurl.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="IdentityModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\IdentityModel.1.10.0\lib\portable-net45+wp80+win8+wpa81\IdentityModel.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="jose-pcl, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\jose-pcl.0.0.4\lib\portable-net45+netcore45+wpa81+wp8\jose-pcl.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\portable-net45+wp80+win8+wpa81+dnxcore50\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="PCLCrypto, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d4421c8a4786956c, processorArchitecture=MSIL">
@@ -128,6 +197,22 @@
       <HintPath>..\packages\Validation.2.2.8\lib\dotnet\Validation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.abstractions.2.0.0\lib\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.abstractions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit.assert, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.assert.2.1.0\lib\dotnet\xunit.assert.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit.core, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.extensibility.core.2.1.0\lib\dotnet\xunit.core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit.execution.dotnet, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.extensibility.execution.2.1.0\lib\wpa81\xunit.execution.dotnet.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -146,6 +231,7 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
+    <Error Condition="!Exists('..\packages\xunit.core.2.1.0\build\wpa81\xunit.core.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.2.1.0\build\wpa81\xunit.core.props'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
