--- a/IdentityModel.HttpSigning.Phone81.Tests/packages.config
+++ b/IdentityModel.HttpSigning.Phone81.Tests/packages.config
@@ -6,6 +6,7 @@
   <package id="jose-pcl" version="0.0.4" targetFramework="wpa81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wpa81" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wpa81" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="wpa81" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="wpa81" />
@@ -13,6 +14,16 @@
   <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="wpa81" />
   <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="wpa81" />
   <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="wpa81" />
+  <package id="System.Collections" version="4.0.11" targetFramework="wpa81" />
+  <package id="System.Dynamic.Runtime" version="4.0.11" targetFramework="wpa81" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="wpa81" />
+  <package id="System.Linq" version="4.1.0" targetFramework="wpa81" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="wpa81" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="wpa81" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="wpa81" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="wpa81" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="wpa81" />
+  <package id="System.Threading" version="4.0.11" targetFramework="wpa81" />
   <package id="Validation" version="2.2.8" targetFramework="wpa81" />
   <package id="xunit" version="2.1.0" targetFramework="wpa81" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="wpa81" />
