--- a/src/IdentityModel.HttpSigning.Portable/IdentityModel.HttpSigning.Portable.csproj
+++ b/src/IdentityModel.HttpSigning.Portable/IdentityModel.HttpSigning.Portable.csproj
@@ -31,7 +31,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\build\</OutputPath>
-    <DefineConstants>TRACE;LIBLOG_PORTABLE</DefineConstants>
+    <DefineConstants>TRACE;LIBLOG_PORTABLE;PORTABLE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
