Updated Portable file name, use custom IdentityModel.dll

--- a/IdentityModel.HttpSigning.Phone81.Tests/IdentityModel.HttpSigning.Phone81.Tests.csproj
+++ b/IdentityModel.HttpSigning.Phone81.Tests/IdentityModel.HttpSigning.Phone81.Tests.csproj
@@ -153,8 +153,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="IdentityModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\IdentityModel.1.10.0\lib\portable-net45+wp80+win8+wpa81\IdentityModel.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Source\Repos\InstG\Inst\Libs\IdentityModel.dll</HintPath>
     </Reference>
     <Reference Include="jose-pcl, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\jose-pcl.0.0.4\lib\portable-net45+netcore45+wpa81+wp8\jose-pcl.dll</HintPath>
@@ -215,7 +215,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
